feat: Update monument title and information, adjust styles, and remove unused assets

--- a/index.html
+++ b/index.html
@@ -25,22 +25,7 @@
   </head>
 
   <body>
-    <button
-      style="
-        all: unset;
-        position: fixed;
-        top: 10px;
-        left: 50%;
-        transform: translateX(-50%);
-        z-index: 100;
-        cursor: pointer;
-        color: white;
-        font-size: 16px;
-        font-weight: 600;
-      "
-    >
-      Horsemen
-    </button>
+    <button id="monument-title">Паметник „Асеневци“</button>
 
     <div class="action-buttons">
       <button id="horsemen1">Цар Петър IV</button>
@@ -59,16 +44,15 @@
         </button>
 
         <div class="info-scroll" data-simplebar>
-          <h2 class="info-title">Заглавие</h2>
+          <h2 class="info-title">Паметник „Асеневци“</h2>
 
           <img class="info-images" src="" alt="Цар" />
           <h3 class="info-years"></h3>
-          <p class="info-text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio
-            ducimus earum dolorum. Nihil eveniet facilis rem dolores id eaque
-            cum nam impedit, numquam dolorem recusandae saepe dicta doloremque.
-            Vel, voluptas?
-          </p>
+          <p class="info-text">   Паметникът „Асеневци“ е посветен на царете Асен, Петър, Калоян и Иван Асен II. Построен е през 1985 г., при навършването на 800 години от въстанието на братята Асен и Петър. Мечът, около който са разположени четиримата Асеневци, символизира мощта и възхода на средновековна България. 
+
+   Династията на Асеневци управлява Второто българско царство между 1187 г. и 1280 г. Произходът на династията е български според българската историография. Самите Асеневци се разглеждат като наследници на българските царе Самуил, Петър I и Симеон I, а своята държава – като продължение на Първата българска държава.
+   
+   Той е не само символ на българската държавност и историческо величие, но и популярна туристическа атракция. Разположен в близост до Държавната художествена галерия „Борис Денев“ и Стамболовия мост, той предлага панорамна гледка към старата част на Велико Търново и река Янтра.</p>
         </div>
         <button id="maximize">
           <img src="/public/pictures/arrow-down.png" alt="arrow down" />
