feat: Update skybox implementation, adjust camera positions for mobile, and refine styles

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Horsemen</title>
+    <title>Паметник „Асеневци“</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="UTF-8" />
@@ -37,10 +37,10 @@
     <div id="info">
       <div class="info-content">
         <button id="close-btn" aria-label="Close">
-          <img src="/public/pictures/close.png" alt="" />
+          <img src="/pictures/close.png" alt="" />
         </button>
         <button id="minimize">
-          <img src="/public/pictures/arrow-up.png" alt="" />
+          <img src="/pictures/arrow-up.png" alt="" />
         </button>
 
         <div class="info-scroll" data-simplebar>
@@ -55,7 +55,7 @@
    Той е не само символ на българската държавност и историческо величие, но и популярна туристическа атракция. Разположен в близост до Държавната художествена галерия „Борис Денев“ и Стамболовия мост, той предлага панорамна гледка към старата част на Велико Търново и река Янтра.</p>
         </div>
         <button id="maximize">
-          <img src="/public/pictures/arrow-down.png" alt="arrow down" />
+          <img src="/pictures/arrow-down.png" alt="arrow down" />
         </button>
       </div>
     </div>
